added assembly plugin added main class definition in build.sbt